--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#intro">ABOUT ME</a></li>
-								<li><a href="#work">EXPERIENCES</a></li>
-								<li><a href="#about">PORTFOLIO</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#ABOUT ME">ABOUT ME</a></li>
+								<li><a href="#EXPERIENCES">EXPERIENCES</a></li>
+								<li><a href="#PORTFOLIO">PORTFOLIO</a></li>
+								<li><a href="#CONTACT">CONTACT</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -46,7 +46,7 @@
 							<article id="ABOUT ME">
 								<h2 class="major">ABOUT ME</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p></p>
+								<p>6'1, Speak portuguese... what else you wanna know?</p>
 								<p></p>
 							</article>
 
@@ -54,7 +54,7 @@
 							<article id="EXPERIENCES">
 								<h2 class="major">EXPERIENCES</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p></p>
+								<p>I can design stuff</p>
 								<p></p>
 							</article>
 
@@ -62,7 +62,7 @@
 							<article id="PORTFOLIO">
 								<h2 class="major">PORTFOLIO</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p></p>
+								<p>follow my insta for more info</p>
 							</article>
 
 						<!-- Contact -->
