--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; © Copyright 2022 - Alex Mourao.</p>
+						<p class="copyright">&copy; Copyright 2022 - Alex Mourao.</p>
 					</footer>
 
 			</div>
