--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							<article id="ABOUT ME">
 								<h2 class="major">ABOUT ME</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>6'1, Speak portuguese... what else you wanna know?</p>
+								<p>I'm 6'1, speak portuguese... what else you wanna know?</p>
 								<p></p>
 							</article>
 
