--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<span class="icon fa-gear"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
@@ -66,8 +66,8 @@
 							</article>
 
 						<!-- Contact -->
-							<article id="contact">
-								<h2 class="major">Contact</h2>
+							<article id="CONTACT">
+								<h2 class="major">CONTACT</h2>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
